--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,6 +48,4 @@ android {
     }
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
+dependencies {}
